# server/services/UsageService.js
@@ -1,36 +1,47 @@
 /* eslint-disable no-unused-vars */
 const Service = require('./Service');
+const UsageMapper = require('../core/UsageMapper');
+
+const LocalStorageProvider = require('../providers/LocalStorageProvider');
+const errorUtils = require('../utils/errorUtils');
 
 /**
-* Create a new Usage
-*
-* contractID String The contract ID
-* body UsageRequest Usage Object Payload
-* returns UsageResponse
-* */
-const createUsage = ({ contractID, body }) => new Promise(
+ * Create a new Usage
+ *
+ * contractID String The contract ID
+ * body UsageRequest Usage Object Payload
+ * returns UsageResponse
+ * */
+const createUsage = ({url, contractID, body}) => new Promise(
   async (resolve, reject) => {
     try {
-      resolve(Service.successResponse({
-        contractID,
-        body,
-      }));
+      const getContractByIdResp = await LocalStorageProvider.getContract(contractID);
+      if (!((getContractByIdResp.state == 'SENT') || (getContractByIdResp.state == 'RECEIVED'))) {
+        reject(Service.rejectResponse(errorUtils.ERROR_BUSINESS_CREATE_USAGE_ON_CONTRACT_ONLY_ALLOWED_IN_STATE_SENT_AND_RECEIVED));
+      }
+      const mspOwner = getContractByIdResp.fromMsp.mspId;
+      const usageToCreate = UsageMapper.getUsageFromPostUsagesRequest(contractID, body, mspOwner);
+      const createUsageResp = await LocalStorageProvider.createUsage(usageToCreate);
+      const returnedResponse = UsageMapper.getResponseBodyForGetUsage(createUsageResp);
+      const returnedHeaders = {
+        'Content-Location': `${url.replace(/\/$/, '')}/${createUsageResp.id}`
+      };
+      resolve(Service.successResponse(returnedResponse, 201, returnedHeaders));
+
     } catch (e) {
-      reject(Service.rejectResponse(
-        e.message || 'Invalid input',
-        e.status || 405,
-      ));
+      reject(Service.rejectResponse(e));
     }
+
   },
 );
 /**
-* Delete a Usage By its ID
-*
-* contractID String The contract ID
-* usageID String The Usage ID
-* returns UsageResponse
-* */
-const deleteUsageByID = ({ contractID, usageID }) => new Promise(
+ * Delete a Usage By its ID
+ *
+ * contractID String The contract ID
+ * usageID String The Usage ID
+ * returns UsageResponse
+ * */
+const deleteUsageByID = ({contractID, usageID}) => new Promise(
   async (resolve, reject) => {
     try {
       resolve(Service.successResponse({
@@ -46,14 +57,14 @@ const deleteUsageByID = ({ contractID, usageID }) => new Promise(
   },
 );
 /**
-* Generate the \"Settlement\" with local calculator and POST to Blochain adapter towards TargetMSP of the calculated response.
-*
-* contractID String The contract ID
-* usageID String The Usage ID
-* mode String Defaults to \"preview\" if not selected. Preview will only performs \"calculation\" and return the calculated settlement in response. if \"commit\", will create the settlement and Send it live to the Blockchain to the targetMSP. (optional)
-* returns Object
-* */
-const generateUsageByID = ({ contractID, usageID, mode }) => new Promise(
+ * Generate the \"Settlement\" with local calculator and POST to Blochain adapter towards TargetMSP of the calculated response.
+ *
+ * contractID String The contract ID
+ * usageID String The Usage ID
+ * mode String Defaults to \"preview\" if not selected. Preview will only performs \"calculation\" and return the calculated settlement in response. if \"commit\", will create the settlement and Send it live to the Blockchain to the targetMSP. (optional)
+ * returns Object
+ * */
+const generateUsageByID = ({contractID, usageID, mode}) => new Promise(
   async (resolve, reject) => {
     try {
       resolve(Service.successResponse({
@@ -70,13 +81,13 @@ const generateUsageByID = ({ contractID, usageID, mode }) => new Promise(
   },
 );
 /**
-* Get Usage Object by its ID
-*
-* contractID String The contract ID
-* usageID String The Usage ID
-* returns UsageResponse
-* */
-const getUsageByID = ({ contractID, usageID }) => new Promise(
+ * Get Usage Object by its ID
+ *
+ * contractID String The contract ID
+ * usageID String The Usage ID
+ * returns UsageResponse
+ * */
+const getUsageByID = ({contractID, usageID}) => new Promise(
   async (resolve, reject) => {
     try {
       resolve(Service.successResponse({
@@ -92,33 +103,30 @@ const getUsageByID = ({ contractID, usageID }) => new Promise(
   },
 );
 /**
-* Get All usage of a given Contract
-*
-* contractID String The contract ID
-* returns String
-* */
-const getUsages = ({ contractID }) => new Promise(
+ * Get All usage of a given Contract
+ *
+ * contractID String The contract ID
+ * returns String
+ * */
+const getUsages = ({contractID}) => new Promise(
   async (resolve, reject) => {
     try {
-      resolve(Service.successResponse({
-        contractID,
-      }));
+      const getUsagesResp = await LocalStorageProvider.getUsages(contractID);
+      const returnedResponse = UsageMapper.getResponseBodyForGetUsages(getUsagesResp);
+      resolve(Service.successResponse(returnedResponse, 200));
     } catch (e) {
-      reject(Service.rejectResponse(
-        e.message || 'Invalid input',
-        e.status || 405,
-      ));
+      reject(Service.rejectResponse(e));
     }
   },
 );
 /**
-* Set State to \"SEND\" and POST to Blochain adapter towards TargetMSP of the Usage
-*
-* contractID String The contract ID
-* usageID String The Usage ID
-* returns UsageResponse
-* */
-const sendUsageByID = ({ contractID, usageID }) => new Promise(
+ * Set State to \"SEND\" and POST to Blokchain adapter towards TargetMSP of the Usage
+ *
+ * contractID String The contract ID
+ * usageID String The Usage ID
+ * returns UsageResponse
+ * */
+const sendUsageByID = ({contractID, usageID}) => new Promise(
   async (resolve, reject) => {
     try {
       resolve(Service.successResponse({
@@ -134,14 +142,14 @@ const sendUsageByID = ({ contractID, usageID }) => new Promise(
   },
 );
 /**
-* Update Usage Object by its ID
-*
-* contractID String The contract ID
-* usageID String The Usage ID
-* body UsageRequest Usage Object Payload
-* returns UsageResponse
-* */
-const updateUsageByID = ({ contractID, usageID, body }) => new Promise(
+ * Update Usage Object by its ID
+ *
+ * contractID String The contract ID
+ * usageID String The Usage ID
+ * body UsageRequest Usage Object Payload
+ * returns UsageResponse
+ * */
+const updateUsageByID = ({contractID, usageID, body}) => new Promise(
   async (resolve, reject) => {
     try {
       resolve(Service.successResponse({
